--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.neenbedankt.android-apt'
 
 android {
     compileSdkVersion 25
@@ -49,4 +50,9 @@ dependencies {
     compile ('me.drakeet.multitype:multitype:2.2.1',{
         exclude group: 'com.android.support' //MultiType 内部引用了 recyclerview-v7:24.2.1 ，如果你不想使用这个版本，可以使用 exclude 将它排除掉
     })//多类型视图
+
+    //dagger2
+    apt 'com.google.dagger:dagger-compiler:2.2'
+    provided 'org.glassfish:javax.annotation:10.0-b28'
+    compile 'com.google.dagger:dagger:2.2'
 }
